Attempt to fix flickering layout problem when the browser window is very big or full screen

--- a/admin-web/src/client/src/components/layout/components/voucher/voucher.styles.pcss
+++ b/admin-web/src/client/src/components/layout/components/voucher/voucher.styles.pcss
@@ -1,10 +1,4 @@
 .voucher {
-  max-width: 450px;
-  max-height: 600px;
-  min-width: 325px;
-  min-height: 350px;
-  width: 27%;
-  height: 63%;
   background: linear-gradient(90deg, #ffffff, #ccf2ff);
   box-shadow: 4px 4px 15px 2px rgba(0,0,0,0.2);
   border-radius: 5px;
