--- a/admin-web/src/client/src/components/layout/layout.styles.pcss
+++ b/admin-web/src/client/src/components/layout/layout.styles.pcss
@@ -1,5 +1,4 @@
 .container {
-  height: 100%;
   position: static;
   display: flex;
   flex-direction: column;
